[gd_scene load_steps=36 format=2]

[ext_resource path="res://Project/Scripts/Meteor.gd" type="Script" id=2]
[ext_resource path="res://Project/Images/cloud.png" type="Texture" id=3]
[ext_resource path="res://Project/Images/VFX/star_04.png" type="Texture" id=4]
[ext_resource path="res://Project/Scripts/AreaScript.gd" type="Script" id=5]
[ext_resource path="res://Project/Images/VFX/magic_03.png" type="Texture" id=6]
[ext_resource path="res://Project/Images/space_shooter/spaceShooter2_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://Project/Images/Meteors/meteors.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=12]
radius = 44.0114

[sub_resource type="CircleShape2D" id=1]
radius = 11.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.0528455, 0.162602, 0.544715, 1 )
colors = PoolColorArray( 1, 0.600586, 0, 1, 0.970215, 0.102372, 0.0454788, 1, 0.145996, 0.0724277, 0.0724277, 1, 0.0901961, 0.0627451, 0.0627451, 0.894118, 0.054902, 0.054902, 0.054902, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0371747, 0.371591 ), 2.152, 2.152, 0, 0, Vector2( 1, 0 ), -0.902827, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale = 0.11
scale_random = 0.26
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 0.905882, 0, 1, 1, 1, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.070632, 1 ), 0.360548, 0.360548, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.44
emission_shape = 1
emission_sphere_radius = 9.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 20.0
radial_accel = 20.0
radial_accel_random = 1.0
scale = 0.02
scale_curve = SubResource( 10 )
color = Color( 5, 5, 5, 1 )
color_ramp = SubResource( 8 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 621, 215, 211 )

[sub_resource type="CanvasItemMaterial" id=20]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0, 0.666667, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.956863, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=22]
gradient = SubResource( 21 )

[sub_resource type="Curve" id=23]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 120.909 ), 0.0, 227.484, 0, 0, Vector2( 1, 0.909119 ), 20.3789, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=24]
curve = SubResource( 23 )

[sub_resource type="Curve" id=27]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.40237, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=28]
curve = SubResource( 27 )

[sub_resource type="ParticlesMaterial" id=19]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 300.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel_random = 1.0
radial_accel_curve = SubResource( 24 )
angle = 180.0
angle_random = 1.0
scale = 0.02
scale_random = 0.05
scale_curve = SubResource( 28 )
color = Color( 0.345098, 0.345098, 0.345098, 1 )
color_ramp = SubResource( 22 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Gradient" id=25]
colors = PoolColorArray( 0.813008, 0.813008, 0.813008, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 25 )

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0.0447154, 0.101626, 0.252033, 0.451219, 1 )
colors = PoolColorArray( 1, 0.979424, 0.636719, 1, 1, 0.943359, 0, 1, 1, 0, 0, 1, 0.254902, 0.109804, 0.109804, 1, 0.0727539, 0.0727539, 0.0727539, 1 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0 ), 0.0, 8.06236, 0, 0, Vector2( 0.152416, 0.688636 ), 1.57771, 1.57771, 0, 0, Vector2( 1, 0 ), -4.15727, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 9.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 360.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 60.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
damping = 15.0
damping_random = 1.0
scale = 0.1
scale_curve = SubResource( 16 )
color_ramp = SubResource( 14 )
color_initial_ramp = SubResource( 26 )

[node name="Meteor" type="RigidBody2D"]
position = Vector2( 0, 1 )
collision_layer = 2
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
_trail_particles = [ NodePath("smoke_tail"), NodePath("sparks") ]
_explosion_particles = [ NodePath("smoke"), NodePath("dust") ]
_Face = NodePath("Meteor")
_VisibilityNotifier = NodePath("VisibilityNotifier2D")

[node name="GravArea" type="Area2D" parent="."]
script = ExtResource( 5 )
_Owner = NodePath("..")
Type = 1

[node name="GravShape" type="CollisionShape2D" parent="GravArea"]
shape = SubResource( 12 )

[node name="MeteorShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="smoke_tail" type="Particles2D" parent="."]
amount = 45
lifetime = 3.0
visibility_rect = Rect2( -10000, -10000, 20000, 20000 )
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="sparks" type="Particles2D" parent="."]
amount = 60
lifetime = 4.0
visibility_rect = Rect2( -10000, -10000, 20000, 20000 )
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 4 )

[node name="Meteor" type="Sprite" parent="."]
modulate = Color( 0.596078, 0.596078, 0.596078, 1 )
scale = Vector2( 0.12, 0.12 )
texture = SubResource( 18 )

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="Sprite2" type="Sprite" parent="Node2D"]
position = Vector2( 200, 0 )
scale = Vector2( 0.136719, 0.136719 )
texture = ExtResource( 6 )

[node name="dust" type="Particles2D" parent="."]
material = SubResource( 20 )
emitting = false
amount = 20
lifetime = 3.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -1000, -1000, 2000, 2000 )
local_coords = false
process_material = SubResource( 19 )
texture = ExtResource( 8 )

[node name="smoke" type="Particles2D" parent="."]
emitting = false
amount = 40
lifetime = 3.0
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
visibility_rect = Rect2( -1000, -1000, 2000, 2000 )
local_coords = false
process_material = SubResource( 17 )
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Meteor_body_entered"]
[connection signal="area_entered" from="GravArea" to="." method="_on_GravArea_area_entered"]
[connection signal="area_exited" from="GravArea" to="." method="_on_GravArea_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
